--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,6 +14,7 @@
         &-logo {
             font-size: 3.2rem;
             color: $clrSecondary;
+            cursor: pointer;
         }
     }
 
